syntax = "proto2";

option java_package = "com.google.sps.proto";
option java_outer_classname = "SimulationTraceProto";

message SimulationTrace {
  optional string name = 1;
  optional int32 num_tiles = 2;
  optional int32 narrow_memory_size_bytes = 3;
  optional int32 wide_memory_size_bytes = 4;
  repeated DependenceNode dependence_node = 5;
  repeated TensorAllocationTable tensor_allocation_narrow = 6;
  repeated TensorAllocationTable tensor_allocation_wide = 7;
  repeated Instruction instruction = 8;
  repeated TraceEvent trace_event = 9;
}

message DependenceNode {
  optional string name = 1;
  optional int32 label = 2;
  repeated int32 operands = 3;
}

message TensorInfo {
  optional string name = 1;
  optional int32 tensor_label = 2;
  optional int32 base_address = 3;
  optional int32 size = 4;  // in allocation units
}

message TensorAllocationTable {
  repeated TensorAllocation tensor_allocation = 1;
}

message TensorAllocation {
  optional TensorInfo tensor_info = 1;
  repeated int32 read_instructions = 3;
  repeated int32 write_instructions = 4;
}

message Counter {
   optional string name = 1;
   // Counter end value (inclusive)
   optional int32 end = 2;
   optional int32 step = 3;
   // Mask indicating if counter is used to compute address. When false, step
   // is expected to be 1 unless a TTU is disabled.
   optional bool mask = 5;
}

message TensorAccess {
  optional TensorInfo tensor_info = 1;
  repeated Counter counter = 2;
}

message Instruction {
  optional string name = 1;
  optional int32 tag = 2;
  repeated bool mask = 3;  // One entry for each tile.
  repeated TensorAccess narrow_read = 4;
  repeated TensorAccess narrow_write = 5;
  repeated TensorAccess wide_read = 6;
  repeated TensorAccess wide_write = 7;
}

message TraceEvent {
  enum AccessType {
    READ_NARROW = 0;
    WRITE_NARROW = 1;
    READ_WIDE = 2;
    WRITE_WIDE = 3;
  }
  optional AccessType access_type = 1;
  optional int32 instruction_tag = 2;
  optional int32 address = 4;
  optional int64 cycle = 5;
}
